# game.libretro.pokemini

./: .travis.yml  CMakeLists.txt  README.md  appveyor.yml
debian/: control
depends/common/pokemini/: CMakeLists.txt  pokemini.txt
game.libretro.pokemini/: addon.xml.in
game.libretro.pokemini/resources/: buttonmap.xml  settings.xml
game.libretro.pokemini/resources/language/English/: strings.po
game.libretro.pokemini/resources/language/resource.language.af_za/: strings.po
game.libretro.pokemini/resources/language/resource.language.am_et/: strings.po
game.libretro.pokemini/resources/language/resource.language.ar_dz/: strings.po
game.libretro.pokemini/resources/language/resource.language.ar_sa/: strings.po
game.libretro.pokemini/resources/language/resource.language.ast_es/: strings.po
game.libretro.pokemini/resources/language/resource.language.az_az/: strings.po
game.libretro.pokemini/resources/language/resource.language.be_by/: strings.po
game.libretro.pokemini/resources/language/resource.language.bg_bg/: strings.po
game.libretro.pokemini/resources/language/resource.language.bs_ba/: strings.po
game.libretro.pokemini/resources/language/resource.language.ca_es/: strings.po
game.libretro.pokemini/resources/language/resource.language.cs_cz/: strings.po
game.libretro.pokemini/resources/language/resource.language.cy_gb/: strings.po
game.libretro.pokemini/resources/language/resource.language.da_dk/: strings.po
game.libretro.pokemini/resources/language/resource.language.de_de/: strings.po
(+68 files in other folders)
